<resources>
    <string name="app_name">Workshop</string>
    <string name="stock_control">Stock Control</string>

    <string name="login">Login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="label_welcome">Welcome</string>
    <string name="label_username">User</string>
    <string name="label_instructions_receiving">To begin, please scan an article or choose one of the
        actions from the side menu.</string>
    <string name="label_quantity">Quantity</string>

    <string name="btn_receive">Receive</string>
    <string name="btn_increase_qty">+</string>
    <string name="btn_decrease_qty">+</string>


    <string name="title_activity_main">Receiving</string> <!--receiving is the starting point-->
    <string name="title_activity_login">Login</string>

    <string name="menu_receiving">Receiving</string>
    <string name="menu_replenishment">Replenishment</string>
    <string name="menu_stocktake">Stocktake</string>

    <string name="hint_article_barcode">Article barcode</string>
</resources>
