<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stockcontrol.dev.workshop.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <!--Welcome message-->


    <TextView
        android:id="@+id/welcomeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="17dp"
        android:text="@string/label_welcome"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/twUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/welcomeLabel"
        android:layout_alignStart="@+id/welcomeLabel"
        android:layout_below="@+id/welcomeLabel"
        android:text="@string/label_username"
        android:textSize="14dp" />

    <TextView
        android:id="@+id/msg_receiving_instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/twUsername"
        android:layout_alignStart="@+id/twUsername"
        android:layout_below="@+id/twUsername"
        android:layout_marginTop="20dp"
        android:text="@string/label_instructions_receiving"
        android:textSize="16dp" />
    <!-- /welcome message-->

    <!--Receiving dialog-->
    <!--article barcode-->
    <EditText
        android:id="@+id/etArticleId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:hint="@string/hint_article_barcode"
        android:inputType="textCapCharacters"
        android:layout_below="@+id/msg_receiving_instruction"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/msg_receiving_instruction"
        android:layout_alignStart="@+id/msg_receiving_instruction" />
    <!--quantity label-->
    <TextView
        android:id="@+id/tw_quantity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_quantity"
        android:textSize="14dp"
        android:layout_alignBaseline="@+id/btnDecreaseQty"
        android:layout_alignBottom="@+id/btnDecreaseQty"
        android:layout_alignLeft="@+id/etArticleId"
        android:layout_alignStart="@+id/etArticleId" />
    <!--quantity input-->

    <Button
        android:id="@+id/btnDecreaseQty"
        android:onClick="decreaseQuantity"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:background="@drawable/qty_btn_style"
        android:text="-"
        android:layout_marginLeft="13dp"
        android:layout_marginStart="13dp"
        android:layout_below="@+id/etArticleId"
        android:layout_toRightOf="@+id/tw_quantity_label"
        android:layout_toEndOf="@+id/tw_quantity_label" />


    <EditText
        android:id="@+id/etArticleQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:background="@android:color/transparent"
        android:ems="2"
        android:inputType="number"
        android:layout_alignBaseline="@+id/btnDecreaseQty"
        android:layout_alignBottom="@+id/btnDecreaseQty"
        android:layout_toRightOf="@+id/btnDecreaseQty"
        android:layout_toEndOf="@+id/btnDecreaseQty" />



    <Button
        android:id="@+id/btnIncreaseQty"
        android:onClick="increaseQuantity"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:background="@drawable/qty_btn_style"
        android:text="@string/btn_increase_qty"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/etArticleId"
        android:layout_toRightOf="@+id/etArticleQty"
        android:layout_toEndOf="@+id/etArticleQty" />

    <Button
        android:id="@+id/btnReceive"
        android:onClick="receiveArticle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_receive"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/tw_quantity_label"
        android:layout_alignStart="@+id/tw_quantity_label" />

</RelativeLayout>
